# JCChat

./: .gitignore  CMakeLists.txt  JCChat.pro  JcChat.pro  README.md  backup.sh  chatroomwindow.cpp  chatroomwindow.h  chatroomwindow.ui  chatwindow.cpp  chatwindow.h  chatwindow.ui  login.cpp  login.h  login.ui  loginwindow.cpp  loginwindow.h  loginwindow.ui  main.cpp  mycal.sh  res.qrc
new_src/: Main.cpp  server.cpp  server.h
src/: CMakeLists.txt  JCChat_Server_v01.cpp  main.cpp
